# oxidizer

./: .cargo-heather.toml  .cargo-rdme.toml  .delta.toml  .gitattributes  .gitconfig  .gitignore  .markdownlint.json  .miri-tree-borrows-skip  .spelling  AGENTS-feature-gated-doctests.md  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  agency.toml  aprz.toml  cliff.toml  clippy.toml  clippy_out.txt  codecov.yml  constants.env  constants.toml  cspell.json  deny.toml  docker-compose.yml  employees.json  just_basic.just  just_coverage.just  just_format.just  just_setup.just  just_spelling.just  justfile  rust-toolchain.toml  rustfmt.toml  spellcheck.toml  unstable-rustfmt.toml  verify_usage
crates/_miri_chacha20_repro/: Cargo.toml
crates/_miri_chacha20_repro/src/: lib.rs
crates/anyspawn/: CHANGELOG.md  Cargo.toml  README.md
crates/anyspawn/benches/: spawner.rs
crates/anyspawn/examples/: custom.rs  otel_context.rs  thread_aware.rs  tokio.rs
crates/anyspawn/src/: builder.rs  custom.rs  handle.rs  lib.rs  spawner.rs
crates/anyspawn/tests/: builder.rs  handle.rs  relocation.rs  spawner.rs
crates/anyspawn_azure/: CHANGELOG.md  Cargo.toml  README.md
crates/anyspawn_azure/src/: lib.rs  runtime.rs
crates/anyspawn_azure/tests/: runtime.rs
crates/arty/: CHANGELOG.md  Cargo.toml  README.md
crates/arty/benches/: BENCHMARK.md  spawner.rs
crates/arty/examples/: custom.rs  custom_spawner.rs  tokio.rs  tokio_basic.rs
crates/arty/src/: lib.rs  spawner.rs
crates/arty/tests/: handle.rs  spawner.rs
crates/automation/: Cargo.toml  README.md
crates/automation/src/: cargo.rs  cargo_metadata.rs  lib.rs  process.rs
crates/autoresolve/: Cargo.toml  DESIGN-overrides.md  SPEC-taint-tracking.md  SPEC.md
crates/autoresolve/src/: base_type.rs  composite.rs  dependency_of.rs  lib.rs  path_cache.rs  path_stack.rs  provide.rs  provide_path.rs  resolve_deps.rs  resolve_from.rs  resolve_output.rs  resolver.rs  resolver_macro.rs  resolver_store.rs  scoped_base.rs  scoped_resolver.rs  shared_type_map.rs
crates/autoresolve/tests/: basic.rs  combined.rs  compile_fail.rs  scoped.rs
crates/autoresolve_macros/: Cargo.toml
crates/autoresolve_macros/src/: lib.rs
crates/autoresolve_macros_impl/: Cargo.toml
crates/autoresolve_macros_impl/src/: base.rs  composite.rs  lib.rs  resolvable.rs
crates/benchmarking/: Cargo.toml
crates/benchmarking/src/: lib.rs
crates/bytesbuf/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/bytesbuf/benches/: buf.rs  buf_cg.rs  bytesbuf_vs_bytes.rs  global_pool.rs  global_pool_cg.rs  view.rs  view_cg.rs
crates/bytesbuf/examples/: bb_basic.rs  bb_has_memory_forwarding.rs  bb_has_memory_global.rs  bb_has_memory_optimizing.rs  bb_optimal_path.rs  bb_reuse.rs  bb_slice_by_slice_write.rs  bb_slice_count_metric.rs  bb_static_data.rs  mem_basic.rs  mem_chunk_write.rs  mem_has_memory_forwarding.rs  mem_has_memory_neutral.rs  mem_has_memory_optimizing.rs  mem_optimal_path.rs  mem_reuse.rs  mem_span_count_metric.rs  mem_static_data.rs
crates/bytesbuf/src/: block.rs  block_ref.rs  buf.rs  buf_put.rs  buf_writer.rs  bytes.rs  callback_memory.rs  constants.rs  fixed_block.rs  global.rs  has_memory.rs  lib.rs  memory_guard.rs  read_adapter.rs  slice.rs  span.rs  span_builder.rs  std_alloc_block.rs  testing.rs  transparent.rs  vec.rs  view.rs  view_get.rs  view_read.rs  write_adapter.rs
crates/bytesbuf_io/: CHANGELOG.md  Cargo.toml  README.md
crates/bytesbuf_io/src/: concurrent_read.rs  concurrent_write.rs  error.rs  lib.rs  read.rs  read_ext.rs  read_futures.rs  write.rs  write_ext.rs
crates/cachelon/: Cargo.toml  README.md
crates/cachelon/benches/: dynamic.rs  features.rs  operations.rs  overhead.rs  refresh.rs
crates/cachelon/examples/: cache_as_service.rs  dynamic.rs  error_handling.rs  fallback.rs  get_or_insert.rs  mock_testing.rs  multi_tier.rs  multi_tier_service.rs  refresh.rs  service_as_storage.rs  service_middleware_composition.rs  simple.rs  stampede.rs  stampede_protection.rs  wrapped.rs
crates/cachelon/src/: builder.rs  cache.rs  fallback.rs  lib.rs  loading.rs  refresh.rs  runtime.rs  wrapper.rs
crates/cachelon/tests/: builder.rs  cache.rs  fallback.rs  future_size.rs  wrapper.rs
crates/cachelon_memory/: Cargo.toml  README.md
crates/cachelon_memory/src/: builder.rs  lib.rs  tier.rs
crates/cachelon_memory/test/: memory.rs
crates/cachelon_memory/tests/: cache.rs
crates/cachelon_service/: Cargo.toml  README.md
crates/cachelon_service/src/: adapter.rs  ext.rs  lib.rs  request.rs
crates/cachelon_service/tests/: adapter.rs
crates/cachelon_tier/: Cargo.toml  README.md
crates/cachelon_tier/src/: dynamic.rs  entry.rs  error.rs  lib.rs  testing.rs  tier.rs
crates/cachelon_tier/tests/: entry.rs  tier.rs
crates/cachet/: CHANGELOG.md  Cargo.toml  README.md
crates/cachet/benches/: dynamic.rs  operations.rs  refresh.rs
crates/cachet/examples/: cache_as_service.rs  dynamic.rs  encrypt_symcrypt.rs  error_handling.rs  fallback.rs  get_or_insert.rs  mock_testing.rs  multi_tier.rs  multi_tier_service.rs  redis_multi_tier.rs  refresh.rs  serialization.rs  serialize_pipeline.rs  service_as_storage.rs  service_middleware_composition.rs  simple.rs  stampede_protection.rs  telemetry_accumulator.rs  telemetry_subscriber.rs  two_tier.rs  type_mapping.rs  wrapped.rs
crates/cachet/src/: lib.rs  (+7 more)
crates/cachet_dashboard/: Cargo.toml
crates/cachet_memory/: CHANGELOG.md  Cargo.toml  README.md
crates/cachet_redis/: Cargo.toml  README.md
crates/cachet_service/: CHANGELOG.md  Cargo.toml  README.md
crates/cachet_tier/: CHANGELOG.md  Cargo.toml  README.md
crates/cancelable/: Cargo.toml  README.md
crates/cargo-ensure-no-cyclic-deps/: CHANGELOG.md  Cargo.toml  README.md
crates/ci_aids/: Cargo.toml  README.md
crates/data_privacy/: CHANGELOG.md  Cargo.toml  README.md
crates/data_privacy_core/: CHANGELOG.md  Cargo.toml  README.md
crates/data_privacy_macros/: CHANGELOG.md  Cargo.toml  README.md
crates/data_privacy_macros_impl/: CHANGELOG.md  Cargo.toml  README.md
crates/error_label/: Cargo.toml  README.md
(+2648 files in other folders)
