# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["The Oxidizer Project Authors"]
license-file = "LICENSE"
homepage = "https://github.com/microsoft/oxidizer"
repository = "https://github.com/microsoft/oxidizer"

# all dependencies are listed with default-features = false, individual crates add the features they need
[workspace.dependencies]

# local dependencies
byte_sequences = { path = "crates/byte_sequences", default-features = false, version = "0.1.0" }
data_privacy = { path = "crates/data_privacy", default-features = false, version = "0.5.0" }
data_privacy_macros = { path = "crates/data_privacy_macros", default-features = false, version = "0.3.0" }
fundle = { path = "crates/fundle", default-features = false, version = "0.3.0" }
fundle_macros = { path = "crates/fundle_macros", default-features = false, version = "0.3.0" }
fundle_macros_impl = { path = "crates/fundle_macros_impl", default-features = false, version = "0.3.0" }
ohno = { path = "crates/ohno", default-features = false, version = "0.1.0" }
ohno_macros = { path = "crates/ohno_macros", default-features = false, version = "0.1.0" }
testing_aids = { path = "crates/testing_aids", default-features = false, version = "0.0.0" }

# external dependencies
alloc_tracker = { version = "0.5.9", default-features = false }
anyhow = { version = "1.0.88", default-features = false  }
bytes = { version = "1.10.1", default-features = false }
criterion = { version = "0.7.0", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
infinity_pool = { version = "0.8.1", default-features = false }
insta = { version = "1.43.2", default-features = false }
mockall = { version = "0.13.1", default-features = false }
mutants = { version = "0.0.3", default-features = false }
new_zealand = { version = "1.0.1", default-features = false }
nm = { version = "0.1.21", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
prettyplease = { version = "0.2.37", default-features = false }
pretty_assertions = { version = "1.3.0", default-features = false  }
proc-macro-crate = { version = "3.4.0", default-features = false }
proc-macro2 = { version = "1.0.103", default-features = true }
quote = { version = "1.0.42", default-features = false }
rand = { version = "0.9.2", default-features = false }
regex = { version = "1.11.0", default-features = false  }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
smallvec = { version = "1.15.1", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
syn = { version = "2.0.110", default-features = false }
thiserror = { version = "2.0.17", default-features = false  }
tokio = { version = "1.36.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
typeid = { version = "1.0.0", default-features = false  }
trybuild = { version = "1.0.114", default-features = false }
xxhash-rust = { version = "0.8.15", default-features = false }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

# Allow cfg attributes for coverage builds
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Lints from the `restriction` group that are not enabled by categories above but are still useful.
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
multiple_unsafe_ops_per_block = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# Below are undesirable lint rules that are enabled by the categories above but are not useful.

# This lint in many cases produces a less readable code and is not worth the trouble.
option_if_let_else = "allow"
# Just because a fn can be const does not mean it should be const. Const is a promise, part of the
# API contract, and removing it is a breaking change so we need to be careful where we commit to const.
missing_const_for_fn = "allow"
# This sometimes prevents marking crate-scoped items as pub(crate), so is not welcome.
redundant_pub_crate = "allow"
# Testing panic messages is not universally applicable - panic messages are not an API contract.
should_panic_without_expect = "allow"
# This just misfires a lot and claims we can drop values that actually need to remain borrowed.
# It also often results in much less readable code for no benefit.
significant_drop_tightening = "allow"
# Blocked by Clippy bug: https://github.com/rust-lang/rust-clippy/issues/15036
wildcard_imports = "allow"

[profile.release]
debug = "line-tables-only"

[profile.mutants]
inherits = "test"
debug = "none"
