# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
authors = ["The Oxidizer Project Authors"]
license = "MIT"
homepage = "https://github.com/microsoft/oxidizer"

# Allowlist of files packaged into published crates (`cargo package`/`publish`).
# We use an explicit include (allowlist), not exclude, so that non-source
# artifacts can never leak into the published `.crate` by construction.
#
# WARNING: never add a Git LFS-tracked file to a packaged path. `cargo` has no
# LFS awareness: depending on whether the publishing runner smudged LFS, an
# LFS-tracked binary is packaged either as its real bytes or as a ~130-byte
# pointer STUB. That makes the `.crate` non-reproducible, so the checksum a
# dependent records for this crate can differ from what crates.io ultimately
# stores - which breaks the dependent's build on docs.rs ("checksum changed
# between lock files"). The `.gitattributes` LFS globs (*.png, *.ico, *.jpg,
# *.pdf, *.zip, *.dll, *.exe, ...) therefore must stay OUT of every packaged
# path (src, examples, tests, benches, docs). Reference such assets by absolute
# URL instead, e.g. `#![doc(html_logo_url = "https://.../logo.png")]`.
#
# The `docs/**/*.md` glob matches only Markdown, so compile-time `include_str!`
# doc fragments are packaged while binary diagram assets beside them are not.
include = [
    "/src/**",
    "/examples/**",
    "/benches/**",
    "/tests/**",
    "!/tests/__fuzz__/**",
    "/docs/**/*.md",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE*",
]

# Adhere to the following rules when adding dependencies:
# * All dependencies specified here need to have default-features turned off - individual crates can enable the
#   features they need
# * Do not create dependency cycles involving dev-dependencies. While Cargo itself may allow this, and even
#   `cargo-release` can deal with them when path-based dependencies are used, they introduce cognitive overhead
#   and tooling uncertainties (e.g. rust-analyzer issues warnings if cycles are present). Until a strong reason
#   is found to allow cycles, we pre-emptively disallow them.

[workspace.dependencies]

# external dependencies
ahash = { version = "0.8.4", default-features = false }
alloc_tracker = { version = "0.6.0", default-features = false }
allocator-api2 = { version = "0.4.0", default-features = false }
anyhow = { version = "1.0.100", default-features = false }

# local dependencies
anyspawn = { path = "crates/anyspawn", default-features = false, version = "0.6.0" }
anyspawn_azure = { path = "crates/anyspawn_azure", default-features = false, version = "0.1.3" }
argh = { version = "0.1.13", default-features = false }
async-once-cell = { version = "0.5.0", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8.9", default-features = false }
azure_core = { version = "1.0.0", default-features = false }
azure_identity = { version = "1.0.0", default-features = false }
azure_storage_blob = { version = "1.0.0", default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
bolero = { version = "0.13.4", default-features = false }
bumpalo = { version = "3.20.2", default-features = false }
bytemuck = { version = "1.25.0", default-features = false }
bytes = { version = "1.11.1", default-features = false }
bytesbuf = { path = "crates/bytesbuf", default-features = false, version = "0.6.0" }
bytesbuf_io = { path = "crates/bytesbuf_io", default-features = false, version = "0.6.0" }
cachet = { path = "crates/cachet", default-features = false, version = "0.9.0" }
cachet_memory = { path = "crates/cachet_memory", default-features = false, version = "0.5.0" }
cachet_service = { path = "crates/cachet_service", default-features = false, version = "0.2.8" }
cachet_tier = { path = "crates/cachet_tier", default-features = false, version = "0.2.6" }
chrono = { version = "0.4.40", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
chumsky = { version = "0.13.0", default-features = false }
criterion = { version = "0.8.1", default-features = false }
ctor = { version = "1.0.8", default-features = false, features = ["proc_macro"] }
darling = { version = "0.23.0", default-features = false }
dashmap = { version = "6.1.0", default-features = false }
data_privacy = { path = "crates/data_privacy", default-features = false, version = "0.12.3" }
data_privacy_core = { path = "crates/data_privacy_core", default-features = false, version = "0.1.2" }
data_privacy_macros = { path = "crates/data_privacy_macros", default-features = false, version = "0.10.3" }
data_privacy_macros_impl = { path = "crates/data_privacy_macros_impl", default-features = false, version = "0.10.3" }
deadpool = { version = "0.13.0", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
duct = { version = "1.1.1", default-features = false }
dynosaur = { version = "0.3.0", default-features = false }
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
fetch = { path = "crates/fetch", default-features = false, version = "0.13.0" }
fetch_azure = { path = "crates/fetch_azure", default-features = false, version = "0.3.0" }
fetch_hyper = { path = "crates/fetch_hyper", default-features = false, version = "0.4.6" }
fetch_options = { path = "crates/fetch_options", default-features = false, version = "0.2.3" }
fetch_tls = { path = "crates/fetch_tls", default-features = false, version = "0.2.5" }
fetch_winhttp = { path = "crates/fetch_winhttp", default-features = false, version = "0.1.0" }
foldhash = { version = "0.2.0", default-features = false }
fundle = { path = "crates/fundle", default-features = false, version = "0.3.4" }
fundle_macros = { path = "crates/fundle_macros", default-features = false, version = "0.3.4" }
fundle_macros_impl = { path = "crates/fundle_macros_impl", default-features = false, version = "0.3.4" }
futures = { version = "0.3.31", default-features = false }
futures-channel = { version = "0.3.31", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
gungraun = { version = "0.19.2", default-features = false }
hashbrown = { version = "0.17.0", default-features = false }
http = { version = "1.4.1", default-features = false, features = ["std"] }
http-body = { version = "1.0.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
http_extensions = { path = "crates/http_extensions", default-features = false, version = "0.7.0" }
http_path_template = { path = "crates/http_path_template", default-features = false, version = "0.2.0" }
hyper = { version = "1.10.1", default-features = false }
hyper-rustls = { version = "0.27.9", default-features = false }
hyper-tls = { version = "0.6.0", default-features = false }
hyper-util = { version = "0.1.20", default-features = false }
infinity_pool = { version = "0.8.1", default-features = false }
insta = { version = "1.44.1", default-features = false }
itoa = { version = "1.0.17", default-features = false }
jiff = { version = "0.2.21", default-features = false }
layered = { path = "crates/layered", default-features = false, version = "0.3.5" }
libc = { version = "0.2.178", default-features = false }
loom = { version = "0.7.2", default-features = false }
many_cpus = { version = "2.1.0", default-features = false }
matchit = { version = "0.8.4", default-features = false }
mimalloc = { version = "0.1.52", default-features = false }
mockall = { version = "0.14.0", default-features = false }
moka = { version = "0.12.14", default-features = false }
multitude = { path = "crates/multitude", default-features = false, version = "0.6.2" }
multitude_macros = { path = "crates/multitude_macros", default-features = false, version = "0.1.0" }
multitude_macros_impl = { path = "crates/multitude_macros_impl", default-features = false, version = "0.1.0" }
mutants = { version = "0.0.3", default-features = false }
native-tls = { version = "0.2.18", default-features = false }
new_zealand = { version = "1.0.4", default-features = false }
nm = { version = "0.1.21", default-features = false }
object-pool = { version = "0.6.0", default-features = false }
ohno = { path = "crates/ohno", default-features = false, version = "0.3.8" }
ohno_macros = { path = "crates/ohno_macros", default-features = false, version = "0.3.5" }
once_cell = { version = "1.21.3", default-features = false }
opentelemetry = { version = "0.32.0", default-features = false }
opentelemetry-semantic-conventions = { version = "0.32.0", default-features = false }
opentelemetry-stdout = { version = "0.32.0", default-features = false }
opentelemetry_sdk = { version = "0.32.0", default-features = false }
opool = { version = "0.2.0", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
path-tree = { version = "0.8.3", default-features = false }
pct-str = { version = "3.0.1", default-features = false }
pin-project = { version = "1.1.8", default-features = false }
pin-project-lite = { version = "0.2.13", default-features = false }
plurality = { path = "crates/plurality", default-features = false, version = "0.1.0" }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
pretty_assertions = { version = "1.4.1", default-features = false }
prettyplease = { version = "0.2.37", default-features = false }
proc-macro-crate = { version = "2.0.2", default-features = false }
proc-macro2 = { version = "1.0.103", default-features = false }
ptr_meta = { version = "0.3.1", default-features = false }
quote = { version = "1.0.42", default-features = false }
rapidhash = { version = "4.1.1", default-features = false }
recoverable = { path = "crates/recoverable", default-features = false, version = "0.1.7" }
regex = { version = "1.12.2", default-features = false }
route-recognizer = { version = "0.3.1", default-features = false }
routerama = { path = "crates/routerama", default-features = false, version = "0.1.0" }
routerama_build = { path = "crates/routerama_build", default-features = false, version = "0.1.0" }
routerama_macros = { path = "crates/routerama_macros", default-features = false, version = "0.1.0" }
rstest = { version = "0.26.0", default-features = false }
rustc-hash = { version = "2.1.0", default-features = false }
rustls = { version = "0.23.40", default-features = false }
rustls-pki-types = { version = "1.14.1", default-features = false }
rustls-platform-verifier = { version = "0.7.0", default-features = false }
seatbelt = { path = "crates/seatbelt", default-features = false, version = "0.6.0" }
seatbelt_http = { path = "crates/seatbelt_http", default-features = false, version = "0.5.0" }
serde = { version = "1.0.228", default-features = false }
serde_core = { version = "1.0.228", default-features = false }
serde_html_form = { version = "0.4.1", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
serde_urlencoded = { version = "0.7.1", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
sharded-slab = { version = "0.1.7", default-features = false }
slab = { version = "0.4.12", default-features = false }
slotmap = { version = "1.1.1", default-features = false }
smallvec = { version = "1.15.1", default-features = false }
smol = { version = "2.0.0", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
syn = { version = "2.0.111", default-features = false }
templated_uri = { path = "crates/templated_uri", default-features = false, version = "0.3.4" }
templated_uri_macros = { path = "crates/templated_uri_macros", default-features = false, version = "0.2.6" }
templated_uri_macros_impl = { path = "crates/templated_uri_macros_impl", default-features = false, version = "0.2.6" }
testing_aids = { path = "crates/testing_aids", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
thread_aware = { path = "crates/thread_aware", default-features = false, version = "0.8.0" }
thread_aware_macros = { path = "crates/thread_aware_macros", default-features = false, version = "0.7.5" }
thread_aware_macros_impl = { path = "crates/thread_aware_macros_impl", default-features = false, version = "0.7.4" }
tick = { path = "crates/tick", default-features = false, version = "0.4.0" }
time = { version = "0.3.47", default-features = false }
tokio = { version = "1.48.0", default-features = false }
tokio-native-tls = { version = "0.3.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-layer = { version = "0.3.3", default-features = false }
tower-service = { version = "0.3.3", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-appender = { version = "0.2.5", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
trait-variant = { version = "0.1.2", default-features = false }
trybuild = { version = "1.0.114", default-features = false }
typeid = { version = "1.0.3", default-features = false }
unicode-ident = { version = "1.0.22", default-features = false }
uniflight = { path = "crates/uniflight", default-features = false, version = "0.3.0" }
uuid = { version = "1.21.0", default-features = false }
widestring = { version = "1.2.1", default-features = false }
windows-sys = { version = "0.61.2", default-features = false }
wiremock = { version = "0.6.5", default-features = false }
xxhash-rust = { version = "0.8.15", default-features = false }
zerocopy = { version = "0.8.26", default-features = false }

# >>> anvil-managed: anvil-workspace-lints
[workspace.lints]
# Catalog of opinionated lints, in dotted-key form so users can extend the
# same scope (`[workspace.lints]` or `[lints]`) outside the sentinels.
# The host-specific table header (`[workspace.lints]` or `[lints]`) is
# prepended by cargo-anvil based on whether the manifest is a workspace
# root or a single-crate Cargo.toml.

# --- rust ------------------------------------------------------------------
rust.ambiguous_negative_literals = "warn"
rust.missing_debug_implementations = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.trivial_numeric_casts = "warn"
rust.unsafe_op_in_unsafe_fn = "warn"
rust.unused_lifetimes = "warn"
# `unexpected_cfgs` is on-by-default at warn since Rust 1.80; combined
# with the catalog's `-D warnings` cloud-workflow policy, any custom cfg name
# becomes a hard build failure. Pre-declare the cfgs that
# `cargo llvm-cov` sets so the recommended coverage-exclusion pattern
# `#[cfg_attr(coverage_nightly, coverage(off))]` works out of the box.
# Adopters who need additional cfg names take ownership of this one
# line (edit the check-cfg array); anvil's drift detector will
# emit a `.anvil-proposed` sibling on future catalog bumps so the
# customization is preserved.
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
    'cfg(loom)',
    'cfg(miri_race_coverage)',
    'cfg(miri_strict_provenance)',
    'cfg(miri_tree_borrows)',
    'cfg(utc_backend)',
] }
# <<< anvil-managed: anvil-workspace-lints

# --- oxidizer-github-specific lint deltas (outside anvil's managed region) ---
# Preserved from the pre-anvil manual policy; these extend the same
# `[workspace.lints]` table. Anvil does not manage them.
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"

# --- rustdoc ---------------------------------------------------------------
rustdoc.broken_intra_doc_links = "warn"
rustdoc.missing_crate_level_docs = "warn"
rustdoc.unescaped_backticks = "warn"

# --- clippy: category gates (priority -1 so per-lint allows can override) --
clippy.cargo = { level = "warn", priority = -1 }
clippy.complexity = { level = "warn", priority = -1 }
clippy.correctness = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.perf = { level = "warn", priority = -1 }
clippy.style = { level = "warn", priority = -1 }
clippy.suspicious = { level = "warn", priority = -1 }

# --- clippy: opinionated additions -----------------------------------------
# Two-repo consensus (oxidizer + oxidizer-github). Restriction-group
# lints that catch real code-smell cases. Adding a workspace-wide lint
# means adopters can only opt out per-crate or by taking ownership of
# this region; only enable when the consensus is strong enough to
# justify that cost.
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.as_pointer_underscore = "warn"
clippy.assertions_on_result_states = "warn"
clippy.clone_on_ref_ptr = "warn"
clippy.deref_by_slicing = "warn"
clippy.disallowed_script_idents = "warn"
clippy.empty_drop = "warn"
clippy.empty_enum_variants_with_brackets = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.if_then_some_else_none = "warn"
clippy.map_err_ignore = "warn"
clippy.multiple_unsafe_ops_per_block = "warn"
clippy.redundant_type_annotations = "warn"
clippy.renamed_function_params = "warn"
clippy.semicolon_outside_block = "warn"
clippy.undocumented_unsafe_blocks = "warn"
clippy.unnecessary_safety_comment = "warn"
clippy.unnecessary_safety_doc = "warn"
clippy.unneeded_field_pattern = "warn"
clippy.unused_result_ok = "warn"
clippy.unwrap_used = "warn"

# --- clippy: opinionated suppressions of category-enabled lints ------------
clippy.missing_const_for_fn = "allow"
clippy.multiple_crate_versions = "allow"
clippy.option_if_let_else = "allow"
clippy.redundant_pub_crate = "allow"
clippy.should_panic_without_expect = "allow"
clippy.significant_drop_tightening = "allow"
# Blocked by Clippy bug: https://github.com/rust-lang/rust-clippy/issues/15036
clippy.wildcard_imports = "allow"
clippy.empty_structs_with_brackets = "warn"
clippy.panic = "warn"

# A bit of debugging support for release builds.
[profile.release]
debug = "line-tables-only"

# Best perf possible for benchmarks
[profile.bench]
lto = "fat"
codegen-units = 1

# Best debugging experience possible for test builds. Even though this is the default, we specify it explicitly,
# otherwise it appears that cargo-llvm-cov assumes different defaults which leads to only minimal debug info in
# coverage builds.
[profile.test]
debug = "full"

# No debug info for mutation testing to speed up compilation
[profile.mutants]
inherits = "test"
debug = "none"

# Profile used by `cargo bolero` (it passes `--profile fuzz` by default).
# Optimized build with single codegen unit, as recommended by cargo-bolero
# to avoid known compilation bugs in the libfuzzer instrumentation.
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
