# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "anyspawn"
description = "A generic task spawner compatible with any async runtime."
version = "0.2.0"
readme = "README.md"
keywords = ["oxidizer", "async", "runtime", "futures"]
categories = ["asynchronous"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/anyspawn"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "tokio::runtime::handle::Handle",
    "thread_aware::core::ThreadAware",
    "thread_aware::affinity::MemoryAffinity",
    "thread_aware::affinity::PinnedAffinity",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
futures-channel = { workspace = true, features = ["alloc"] }
thread_aware = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true, features = ["executor"] }
insta.workspace = true
opentelemetry = { workspace = true, features = ["futures"] }
smol = "2"
static_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[[test]]
name = "spawner"
required-features = ["tokio"]

[[test]]
name = "handle"
required-features = ["tokio"]

[[test]]
name = "builder"
required-features = ["tokio"]

[[bench]]
name = "spawner"
harness = false
required-features = ["tokio"]

[[example]]
name = "custom"
required-features = ["tokio"]

[[example]]
name = "tokio"
required-features = ["tokio"]

[[example]]
name = "otel_context"
required-features = ["tokio"]

[[example]]
name = "thread_aware"
required-features = ["tokio"]

[lints]
workspace = true
